k8s-ingress/k8s-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: ms-telegram-bot-cluster-ip-service
                port:
                  number: 8080
#          - path: /api/?(.*)
#            pathType: Prefix
#            backend:
#              service:
#                name: server-cluster-ip-service
#                port:
#                  number: 5000
